--- a/app/client/stylesheets/_branding.scss
+++ b/app/client/stylesheets/_branding.scss
@@ -4,12 +4,12 @@
  * tertiary (default blue): waitlist/declined dashboard status
  */
 
-$primary: #e76482;
-$secondary: #473899;
-$tertiary: #4c82cc;
+$primary: #18A754;
+$secondary: #696969;
+$tertiary: #A9A9A9;
 
 /** ASSET URLS
  * login-bg: image for login splash page 
  */
 
-$login-bg: url('https://s3.amazonaws.com/hackmit-assets/tintedphoto_1920_1080_low.jpg');
+$login-bg: url('https://images.unsplash.com/photo-1512428197675-daae5d4e1e43?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80');
